[package]
name = "rdfs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
thiserror = "2.0.18"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
flate2 = "1.1.8"
rusqlite = { version = "0.32", features = ["bundled"] }

[[bin]]
name = "master"
path = "src/bin/master.rs"

[[bin]]
name = "storage"
path = "src/bin/storage.rs"

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "client_demo"
path = "src/bin/client_demo.rs"

[[bin]]
name = "stress_test"
path = "src/bin/stress_test.rs"
