[package]
name = "rdfs"
version = "0.1.0"
edition = "2024"
license = "MIT"
autobins = false

[dependencies]
anyhow = "1.0.100"
futures-util = "0.3.31"
openraft = { version = "0.10.0-alpha.15", features = ["serde"] }
prost = "0.14.1"
rocksdb = { version = "0.24.0", default-features = false, features = ["snappy"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tokio = { version = "1.49.0", features = ["full"] }
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.2"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.2"

[[bin]]
name = "rdfs-meta"
path = "src/bin/rdfs-meta.rs"

[[bin]]
name = "rdfs-chunk"
path = "src/bin/rdfs-chunk.rs"

[[bin]]
name = "rdfs-client"
path = "src/bin/rdfs-client.rs"

[[bin]]
name = "rdfs-local"
path = "src/bin/rdfs-local.rs"

[[bin]]
name = "xtask"
path = "src/bin/xtask.rs"
